added all CRUD methods and forms

--- a/nostal_dja_project/nostal_dja/templates/nostal_dja/base.html
+++ b/nostal_dja_project/nostal_dja/templates/nostal_dja/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nostal_dja</title>
-    <link rel="stylesheet" href="{% static 'css/tunr.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nostal_dja.css' %}">
 </head>
 
 <body>
