--- a/nostal_dja_project/nostal_dja/templates/nostal_dja/fad_detail.html
+++ b/nostal_dja_project/nostal_dja/templates/nostal_dja/fad_detail.html
@@ -1,7 +1,7 @@
-{% extends 'tunr/base.html' %} {% block content %}
+{% extends 'nostal_dja/base.html' %} {% block content %}
 
 <h2>{{ fad.name }}
-    <a href="">(edit)</a>
+    <a href="{% url 'fads_update' id=fad.id %}">(edit)</a>
 </h2>
 
 <img src="{{ fad.image_url }}" alt="Fad Photo" class="fad-photo" />
