--- a/nostal_dja_project/nostal_dja/templates/nostal_dja/base.html
+++ b/nostal_dja_project/nostal_dja/templates/nostal_dja/base.html
@@ -14,6 +14,13 @@
 <body>
     <h1>Nostal_dja</h1>
     <nav>
+        <div class="user-info">
+            {% if user.is_authenticated %} Welcome, {{ user.username }}
+            <a href="{% url 'logout' %}">Signout</a>
+            {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </div>
         <a href="/">Decades</a>
         <a href="/fads">Fads</a>
     </nav>
